Bug 551658 - preempt Java 9 deprecations
Migrate from using Number constructors and use static methods